--- a/docs/source/release-notes/v1.10.0.rst
+++ b/docs/source/release-notes/v1.10.0.rst
@@ -4,8 +4,8 @@ InfinniPlatform 1.10.0
 Версия посвящена выпуску :doc:`планировщика заданий </17-scheduler/index>` и улучшению
 механизмов по работе с :doc:`очередями сообщений </12-queues/index>`.
 
-Планировщик заданий
--------------------
+Job Scheduler
+-------------
 
 Появилась возможность добавлять задачи, которые будут выполняться в фоновом режиме по
 заданному расписанию. При этом учитывается возможность развертывания приложения в
@@ -26,8 +26,8 @@ InfinniPlatform 1.10.0
 
 .. _Quartz.NET: https://www.nuget.org/packages/Quartz
 
-Очередь сообщений
------------------
+Message Queue
+-------------
 
 :ref:`Добавлена возможность <queue-settings>` управлять количеством сообщений, единовременно передаваемых получателю,
 что позволит быстрее освобождать очередь, а также снизить время на сетевое взаимодействие между сервером приложений и сервером очереди сообщений.
