--- a/docs/source/release-notes/v1.11.0.rst
+++ b/docs/source/release-notes/v1.11.0.rst
@@ -170,5 +170,42 @@ ITenantScope
 Также обеспечена поддержка выполнения асинхронных операций (``async``/``await``) внутри области (``using``).
 
 
+Плагины к InfinniPlatform и Razor view engine
+---------------------------------------------
+
+Введен новый тип NuGet-пакетов - ``Plugins``.
+В отличии от пакетов-расширений (``Extensions``), плагины устанавливаются непосредственно в папку platform 
+и расширяют возможности ``InfinniPlatform``. Это изменение позволило уменьшить количество зависимостей ядра платформы. 
+
+
+Движок отображения Razor-представлений теперь исключен из ядра платформы и представляет собой отдельный пакет ``InfinniPlatform.Plugins.ViewEngine``.
+
+
+Команда Init
+------------
+
+Добавлена команда ``Init`` в InfinniPlatform.ServiceHost.exe и Infinni.Node.exe. Позволяет запустить логику инициализации приложения, реализованную 
+в интерфейсе `IChetoTam`:
+
+.. code-block:: csharp
+
+    //code
+
+Позволяет выполнить операции типа инициализации БД, миграции данных и т.п. без старта самого приложения.
+
+
+JSON-схемы конфигурационных файлов
+----------------------------------
+
+В файлы конфигурации можно подключить JSON-схему, что позволяет использовать автодополнение в редакторах кода 
+(например Visual Studio, Visual Studio Code), а также получать информацию о секциях, параметрах и их возможных значений. 
+
+
+Инструменты для администрирования приложений (Infinni.Agent + Infinni.Server)
+-----------------------------------------------------------------------------
+
+Подробнее про :doc:`Infinni.Agent </02-ioc/index>` и про :doc:`Infinni.Server </02-ioc/index>`.
+
+
 .. _`Package Manager Console`: http://docs.nuget.org/consume/package-manager-console
 .. _`редактор печатных представлений`: https://github.com/InfinniPlatform/InfinniPlatform.PrintViewDesigner
