Refactoring the project structure

--- a/docs/source/release-notes/v1.10.0.rst
+++ b/docs/source/release-notes/v1.10.0.rst
@@ -1,8 +1,8 @@
 InfinniPlatform 1.10.0
 ======================
 
-Версия посвящена выпуску :doc:`планировщика заданий </17-scheduler/index>` и улучшению
-механизмов по работе с :doc:`очередями сообщений </12-queues/index>`.
+Версия посвящена выпуску :doc:`планировщика заданий </scheduler/index>` и улучшению
+механизмов по работе с :doc:`очередями сообщений </queues/index>`.
 
 Job Scheduler
 -------------
@@ -15,13 +15,13 @@ Job Scheduler
 Для диспетчеризации заданий используется популярная и очень мощная библиотека Quartz.NET_.
 Недавно авторами этого проекта был анонсирован переход на .NET Core, что способствовало выбору
 данного инструмента. Благодаря Quartz.NET стало возможным использование такого гибкого инструмента
-планирования, как :doc:`выражения CRON </17-scheduler/scheduler-cronexpression>`.
+планирования, как :doc:`выражения CRON </scheduler/scheduler-cronexpression>`.
 
-Ко всему прочему добавлен механизм :doc:`управления планировщиком заданий </17-scheduler/scheduler-jobscheduler>`
-во время работы приложения, а также гибкие инструменты для его :doc:`администрирования </17-scheduler/scheduler-settings>`.
+Ко всему прочему добавлен механизм :doc:`управления планировщиком заданий </scheduler/scheduler-jobscheduler>`
+во время работы приложения, а также гибкие инструменты для его :doc:`администрирования </scheduler/scheduler-settings>`.
 
 Для начала начала работы с планировщиком заданий InfinniPlatform можно воспользоваться
-статьей, доступной по следующей :doc:`ссылке </17-scheduler/scheduler-gettingstarted>`.
+статьей, доступной по следующей :doc:`ссылке </scheduler/scheduler-gettingstarted>`.
 
 
 .. _Quartz.NET: https://www.nuget.org/packages/Quartz
