--- a/docs/source/release-notes/v1.11.0.rst
+++ b/docs/source/release-notes/v1.11.0.rst
@@ -9,7 +9,7 @@ InfinniPlatform 1.11.0
 Print View
 ----------
 
-Механизм :doc:`печатных представлений </15-print-view/index>` был исключен из стандартного функционала InfinniPlatform и теперь предоставляется в виде
+Механизм :doc:`печатных представлений </print-view/index>` был исключен из стандартного функционала InfinniPlatform и теперь предоставляется в виде
 отдельного NuGet-пакета ``InfinniPlatform.PrintView``. Теперь, чтобы добавить функциональность печатных представлений в свой проект, необходимо установить
 данный пакет, выполнив следующую команду в `Package Manager Console`_.
 
@@ -135,7 +135,7 @@ SerializerVisibleAttribute
 
 * подключить в свое решение NuGet-пакет ``InfinniPlatform.Http``;
 * реализовать интерфейс ``InfinniPlatform.Http.Middlewares.IHttpMiddleware`` с нужной логикой аутентификации;
-* зарегистрировать реализацию интерфейса в :doc:`контейнере зависимостей </02-ioc/index>`.
+* зарегистрировать реализацию интерфейса в :doc:`контейнере зависимостей </ioc/index>`.
 
 
 Переименование
